--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -195,7 +195,7 @@
                 border-radius: 4px;
 
                 &.open {
-                    background-color: @visualization-box-background;
+                    background-color: @visualization-box-background-transparent;
                 }
 
                 .divider {
@@ -222,6 +222,7 @@
 
                             .legend-title {
                                 margin-right: 25px;
+                                font-size: 14px;
                             }
 
                             .glyphicon {
@@ -262,6 +263,7 @@
                 opacity: .8;
                 padding: 3px;
                 display: block;
+                font-size: 12px;
             }
         }
 
