--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -5,7 +5,7 @@
         <div class="pull-left header-text" style="padding-left: 20px;">
             Showing
             <span class="text-primary active-count" ng-bind="active.count | number"></span> of
-            <span ng-bind="active.totalRows | number"></span>
+            <span ng-bind="active.total | number"></span>
         </div>
 
         <options-menu parent-element="element" export-function="makeQueryResultsTableExportObject">
@@ -21,17 +21,17 @@
             </div>
 
             <div class="form-group">
-                <label>Sort By</label>
+                <label>Sort By Field</label>
                 <div class="input-group">
-                    <select class="form-control" ng-model="active.sortByField" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="updateSort()">
+                    <select class="form-control" ng-model="active.sortByField" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleSortByFieldChange()">
                     </select>
 
                     <div class="input-group-btn">
                         <label class="btn btn-default active" ng-class="{true: 'active', false: ''}[active.sortDirection === ASCENDING]">
-                            <input type="radio" ng-model="active.sortDirection" style="display:none" ng-value="ASCENDING" ng-change="updateSort('asc')">ASC
+                            <input type="radio" ng-model="active.sortDirection" style="display:none" ng-value="ASCENDING" ng-change="handleSortDirectionChange()">ASC
                         </label>
                         <label class="btn btn-default" ng-class="{true: 'active', false: ''}[active.sortDirection === DESCENDING]">
-                            <input type="radio" ng-model="active.sortDirection" style="display:none" ng-value="DESCENDING" ng-change="updateSort('desc')">DESC
+                            <input type="radio" ng-model="active.sortDirection" style="display:none" ng-value="DESCENDING" ng-change="handleSortDirectionChange()">DESC
                         </label>
                     </div>
                 </div>
@@ -42,13 +42,14 @@
                 <div class="input-group">
                     <input type="number" min="1" class="form-control" ng-model="active.limit" required>
                     <div class="input-group-btn">
-                        <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="queryForData()">
+                        <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="handleLimitChange()">
                             <span class="glyphicon glyphicon-refresh"></span>
                         </button>
                     </div>
                 </div>
             </div>
         </options-menu>
+
         <a class="edit-table-icon" ng-class="{active: gridOptions.showToolPanel}">
             <i class="pull-right glyphicon glyphicon-edit" ng-click="toggleToolbox()" title="Modify Table Rows"></i>
         </a>
