Updated the USER-ALE logs in the Aggregation Table.

--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -58,7 +58,7 @@
         <div class="form-group">
             <label>Value Limit</label>
             <div class="input-group">
-                <input type="number" min="1" class="form-control" ng-model="active.limitCount" required>
+                <input type="number" min="1" class="form-control" ng-model="active.limit" required>
                 <div class="input-group-btn">
                     <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="handleLimitChange()">
                         <span class="glyphicon glyphicon-refresh"></span>
