Fixed the style for the filter tray navbar item so that hovering over it now changes the mouse cursor to a pointer.

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -199,6 +199,10 @@
             margin-left: 5px;
             margin-right: 5px;
         }
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 
     .options-dropdown {
