Moved the number of records text in the title of the Data Table to the options menu button.  Reverted the responsive sizing behavior of the options menu to favor it over the title:  the title will now shrink responsively with the size of the visualization and the options menu button; the options menu button text will only be replaced by a symbol if the text is bigger than the visualization itself.

--- a/app/css/directives/queryResultsTable.less
+++ b/app/css/directives/queryResultsTable.less
@@ -28,22 +28,15 @@
 
     .header {
         .header-container {
-            .active-count {
-                color: @accent-bright;
-            }
+            .edit-table {
+                .glyphicon {
+                    font-size: 14px;
+                    padding-left: 10px;
 
-            .edit-table-icon {
-                &.active, &:hover {
-                    i {
+                    &.active, &:active, &:focus, &:hover {
                         color: @accent-bright;
+                        cursor: pointer;
                     }
-                }
-
-                i {
-                    line-height: 20px;
-                    padding-right: 10px;
-                    font-size: 16px;
-                    font-weight: bold;
                 }
             }
         }
