--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -1,7 +1,8 @@
 <div class="header-container menu-container">
-    <options-menu parent-element="element" export-function="makeMapExportObject" resize="resizeOptionsMenu" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
-        <div class="form-group info-container">
-            <label><span class="glyphicon glyphicon-info-sign"></span>SHIFT + DRAG on Map to Filter</label>
+    <options-menu parent-element="element" export-function="makeMapExportObject" resize-menu="resizeOptionsMenu" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
+        <div class="form-group">
+            <label class="glyphicon glyphicon-info-sign"></label>
+            <label>SHIFT + DRAG on Map to Filter</label>
         </div>
 
         <div class="form-group button-container">
