--- a/app/partials/directives/optionsMenu.html
+++ b/app/partials/directives/optionsMenu.html
@@ -1,14 +1,21 @@
 <div class="chart-options pull-right">
     <a class="btn collapsed" data-toggle="collapse" data-target=".{{uniqueVisualizationOptions}} .popover" data-animation=false ng-click="toggleOptionsDisplay()">
-        <span id="text" class="header-text" ng-bind="getButtonText()" ng-show="showButtonText()" title="{{getButtonText()}}" style="display: none;"></span>
-        <span id="symbol" class="glyphicon glyphicon-exclamation-sign" ng-show="showButtonText()" title="{{getButtonText()}}" style="display: none;"></span>
+        <span id="text" class="header-text" ng-bind="getButtonText()" ng-show="showButtonText()" title="Open/Close the Options Menu" style="display: none;"></span>
+        <span id="symbol" class="glyphicon glyphicon-exclamation-sign" ng-show="showButtonText()" title="Open/Close the Options Menu"></span>
         <span class="glyphicon glyphicon-cog" title="Open/Close the Options Menu"></span>
         <span class="caret"></span>
     </a>
+
     <div class="popover bottom">
         <div class="arrow"></div>
         <div class="popover-content">
+            <div id="symbol" class="form-group" ng-show="showButtonText()">
+                <label class="glyphicon glyphicon-exclamation-sign"></label>
+                <label ng-bind="getButtonText()"></label>
+            </div>
+
             <div ng-transclude></div>
+
             <div class="form-group" ng-show="exportFunction !== undefined && showExport">
                 <div class="input-group">
                     <button type="button" class="btn btn-default export" ng-click="requestExport()">
