--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -1,14 +1,12 @@
 <div class="header">
     <div class="header-container" ng-show="!(hideHeader)">
-
         <div class="title header-text pull-left" ng-bind="(bindTitle != undefined) ? bindTitle : active.table.prettyName"></div>
-        <div class="pull-left header-text" style="padding-left: 20px;">
-            Showing
-            <span class="text-primary active-count" ng-bind="active.count | number"></span> of
-            <span ng-bind="active.total | number"></span>
-        </div>
 
-        <options-menu parent-element="element" export-function="makeQueryResultsTableExportObject">
+        <a class="edit-table" ng-class="{active: gridOptions.showToolPanel}">
+            <i class="header-text glyphicon glyphicon-edit" ng-click="toggleToolbox()" title="Modify Table Rows"></i>
+        </a>
+
+        <options-menu parent-element="element" export-function="makeQueryResultsTableExportObject" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
             <div class="form-group" ng-show="!(hideAdvancedOptions)">
                 <label>Database</label>
                 <select class="form-control" ng-model="active.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="handleDatabaseChange()">
@@ -49,11 +47,9 @@
                 </div>
             </div>
         </options-menu>
-
-        <a class="edit-table-icon" ng-class="{active: gridOptions.showToolPanel}">
-            <i class="pull-right glyphicon glyphicon-edit" ng-click="toggleToolbox()" title="Modify Table Rows"></i>
-        </a>
     </div>
-    <div class="clearfix"></div>
 </div>
+
+<div class="clearfix"></div>
+
 <div ag-grid="gridOptions" class="ag-fresh results-table"></div>
