NEON-1838 Create wizard to setup custom dashbords

--- a/app/css/popupStyle.less
+++ b/app/css/popupStyle.less
@@ -157,6 +157,15 @@
             }
         }
     }
+
+    .no-data {
+        font-style: italic;
+        font-size: 16px;
+    }
+
+    .glyphicon-chevron-up, .glyphicon-chevron-down {
+        cursor: pointer;
+    }
 }
 
 #videoModal {
