--- a/app/css/style.less
+++ b/app/css/style.less
@@ -337,6 +337,23 @@ select[multiple] {
     &.neon-well-thin {
         padding: 4px;
     }
+
+    .inner-group {
+        margin-left: 20px;
+    }
+
+    .toggled-group {
+        margin-top: 15px;
+    }
+
+    .form-group {
+        > .glyphicon-trash {
+            color: @error-color;
+            font-size: 18px;
+            top: 50%;
+            transform: translateY(50%);
+        }
+    }
 }
 
 .no-margin {
@@ -438,4 +455,16 @@ select[multiple] {
             }
         }
     }
+}
+
+.error-label {
+    color: @error-text-color;
+    margin: 10px 0px 0px;
+}
+
+
+.truncate {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
