NEON-1593 Code review changes

--- a/app/css/directives/linechart.less
+++ b/app/css/directives/linechart.less
@@ -101,12 +101,12 @@
         position: absolute;
 
         .legend {
-            background-color: @visualization-box-background-transparent;
+            background-color: @visualization-box-background;
             border: @main-border;
             border-radius: 4px;
 
             &.open {
-                background-color: @visualization-box-background-transparent;
+                min-width: 175px;
             }
 
             .divider {
