--- a/app/css/app.less
+++ b/app/css/app.less
@@ -28,6 +28,10 @@
                 color: @main-text-color;
             }
         }
+
+        button {
+            margin: 5px 20px;
+        }
     }
 
     .active {
