NEON-1870 Fields can now be configured to be given the specified style class in the Data Table.  Added a highlight style class.

--- a/app/css/directives/newsfeed.less
+++ b/app/css/directives/newsfeed.less
@@ -41,7 +41,7 @@
         }
 
         &.highlight {
-            background-color: #ffff66;
+            background-color: @callout;
         }
 
         img {
