Minor styling changes for the toolbox toggle in the Data Table.

--- a/app/css/directives/queryResultsTable.less
+++ b/app/css/directives/queryResultsTable.less
@@ -31,7 +31,7 @@
             .edit-table {
                 .glyphicon {
                     font-size: 14px;
-                    padding-left: 10px;
+                    padding: 0px 10px;
 
                     &.active, &:active, &:focus, &:hover {
                         color: @accent-bright;
