Cleaning up plotly directive

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -379,6 +379,7 @@
 @import 'directives/linechart.less';
 @import 'directives/map.less';
 @import 'directives/newsfeed.less';
+@import 'directives/plotlyGraph.less';
 @import 'directives/poweredByNeon.less';
 @import 'directives/queryResultsTable.less';
 @import 'directives/sample.less';
