--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -52,4 +52,4 @@
 
 <div class="clearfix"></div>
 
-<div ag-grid="gridOptions" class="ag-fresh results-table"></div>
+<div ag-grid="gridOptions" class="ag-fresh results-table" ng-class="{true: 'ag-dark', false: 'ag-fresh'}[themeType === 'dark']"></div>
