--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -113,6 +113,11 @@
                             </select>
                         </div>
 
+                        <div class="form-group layer-options-col" ng-show="(options.newLayer.type == 'heatmap')">
+                            <label>Color Code 1</label>
+                            <input type="text" class="form-control" placeholder="None" ng-cancel-drag ng-model="options.newLayer.gradient1" ng-required="false"/>
+                        </div>
+
                         <div class="form-group layer-options-col" ng-show="(options.newLayer.type == 'node')">
                             <label>Source Field</label>
                             <select class="form-control" ng-model="options.newLayer.source" ng-options="field.prettyName for field in fields" ng-required="(options.newLayer.type == 'node')" ng-disabled="!(fields.length > 0)"></select>
@@ -138,6 +143,28 @@
                                     {{ field.prettyName }}
                                 </option>
                             </select>
+                        </div>
+                    </div>
+
+                    <div class="layer-options-row row-large" ng-show="(options.newLayer.type == 'heatmap')">
+                        <div class="form-group layer-options-col">
+                            <label>Color Code 2</label>
+                            <input type="text" class="form-control" placeholder="None" ng-cancel-drag ng-model="options.newLayer.gradient2" ng-required="false"/>
+                        </div>
+
+                        <div class="form-group layer-options-col">
+                            <label>Color Code 3</label>
+                            <input type="text" class="form-control" placeholder="None" ng-cancel-drag ng-model="options.newLayer.gradient3" ng-required="false"/>
+                        </div>
+
+                        <div class="form-group layer-options-col">
+                            <label>Color Code 4</label>
+                            <input type="text" class="form-control" placeholder="None" ng-cancel-drag ng-model="options.newLayer.gradient4" ng-required="false"/>
+                        </div>
+
+                        <div class="form-group layer-options-col">
+                            <label>Color Code 5</label>
+                            <input type="text" class="form-control" placeholder="None" ng-cancel-drag ng-model="options.newLayer.gradient5" ng-required="false"/>
                         </div>
                     </div>
 
@@ -279,6 +306,11 @@
                                     </select>
                                 </div>
 
+                                <div class="form-group layer-options-col" ng-show="layer.type == 'heatmap'">
+                                    <label>Color Code 1</label>
+                                    <input type="text" class="form-control" placeholder="{{layer.gradient1 || 'None'}}" ng-cancel-drag ng-model="layer.gradient1" ng-required="false"/>
+                                </div>
+
                                 <div class="form-group layer-options-col" ng-show="layer.type == 'node'">
                                     <label>Source Field</label>
                                     <select class="form-control" ng-cancel-drag ng-model="layer.sourceField" ng-options="field.prettyName for field in layer.fields" ng-required="(layer.type == 'node')" ng-disabled="!(layer.fields.length > 0)">
@@ -307,6 +339,28 @@
                                             {{field.prettyName}}
                                         </option>
                                     </select>
+                                </div>
+                            </div>
+
+                            <div class="layer-options-row row-large" ng-show="layer.type == 'heatmap'">
+                                <div class="form-group layer-options-col">
+                                    <label>Color Code 2</label>
+                                    <input type="text" class="form-control" placeholder="{{layer.gradient2 || 'None'}}" ng-cancel-drag ng-model="layer.gradient2" ng-required="false"/>
+                                </div>
+
+                                <div class="form-group layer-options-col">
+                                    <label>Color Code 3</label>
+                                    <input type="text" class="form-control" placeholder="{{layer.gradient3 || 'None'}}" ng-cancel-drag ng-model="layer.gradient3" ng-required="false"/>
+                                </div>
+
+                                <div class="form-group layer-options-col">
+                                    <label>Color Code 4</label>
+                                    <input type="text" class="form-control" placeholder="{{layer.gradient4 || 'None'}}" ng-cancel-drag ng-model="layer.gradient4" ng-required="false"/>
+                                </div>
+
+                                <div class="form-group layer-options-col">
+                                    <label>Color Code 5</label>
+                                    <input type="text" class="form-control" placeholder="{{layer.gradient5 || 'None'}}" ng-cancel-drag ng-model="layer.gradient5" ng-required="false"/>
                                 </div>
                             </div>
 
