Added margins to the animation controls in the timeline.

--- a/app/css/directives/timelineSelector.less
+++ b/app/css/directives/timelineSelector.less
@@ -157,6 +157,10 @@
             }
         }
     }
+
+    .animation-controls {
+        margin: 0px 10px;
+    }
 }
 
 .visualization-widget-mobile {
