--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -148,7 +148,7 @@
         </ul>
     </div>
 
-    <div class="pull-left">
+    <div class="animation-controls pull-left">
         <span class="form-group" ng-if="options.showAnimationControls">
             <span class="btn-group">
                 <label class="btn btn-default header-item" role="button" title="{{(options.animatingTime) ? 'Pause' : ((options.animationFrame > getAnimationStartFrame()) ? 'Resume' : 'Play')}}"
